--- a/src/main/resources/assets/skytils/lang/zh_CN.lang
+++ b/src/main/resources/assets/skytils/lang/zh_CN.lang
@@ -201,6 +201,7 @@ skytils.config.miscellaneous.items.hide_midas_staff_gold=隐藏Midas Staff的黄
 skytils.config.miscellaneous.items.highlight_filled_bazaar_orders=高亮已填满的集市订单
 skytils.config.miscellaneous.items.item_cooldown_display=物品冷却显示
 skytils.config.miscellaneous.items.item_stars_display=物品星星显示模式
+skytils.config.miscellaneous.items.show_item_quality=显示物品质量
 skytils.config.miscellaneous.items.head_display_size=背包内头颅显示大小
 skytils.config.miscellaneous.items.prevent_placing_weapons=防止放置武器
 skytils.config.miscellaneous.items.wither_shield_cooldown_tracker=Wither Shield冷却跟踪器
