--- a/src/main/resources/assets/skytils/lang/zh_TW.lang
+++ b/src/main/resources/assets/skytils/lang/zh_TW.lang
@@ -5,7 +5,7 @@ skytils.config.general.local_api.auto_start_local_api=自動啟動本地API
 skytils.config.general.local_api.local_api_password=本地API密碼
 skytils.config.general.other.join_the_skytils_discord=加入Skytils Discord
 skytils.config.general.other.first_launch=首次啟動
-skytils.config.general.other.last_launched_skytils_version=上次啓動的Skytils版本
+skytils.config.general.other.last_launched_skytils_version=上次啟動的Skytils版本
 skytils.config.general.other.always_sprint_in_skyblock=在空島生存中維持疾走
 skytils.config.general.other.config_button_on_pause=暫停畫面中顯示設定按鈕
 skytils.config.general.other.reopen_options_menu=重新開啟Skytils選項選單
