--- a/src/main/resources/assets/catlas/lang/zh_TW.lang
+++ b/src/main/resources/assets/catlas/lang/zh_TW.lang
@@ -21,7 +21,7 @@ catlas.config.colors.doors.blood_door=血之門
 catlas.config.colors.doors.entrance_door=入口門
 catlas.config.colors.doors.normal_door=普通門
 catlas.config.colors.doors.wither_door=凋零之門
-catlas.config.colors.doors.opened_wither_door=已開啓的凋零之門
+catlas.config.colors.doors.opened_wither_door=已開啟的凋零之門
 catlas.config.colors.doors.unopened_door=未開啟的門
 catlas.config.colors.rooms.blood_room=血之房間
 catlas.config.colors.rooms.entrance_room=入口房間
