BetterMap-style dungeon score estimate

--- a/src/main/resources/assets/skytils/lang/en_US.lang
+++ b/src/main/resources/assets/skytils/lang/en_US.lang
@@ -35,7 +35,8 @@ skytils.config.dungeons.miscellaneous.red_screen_fix=Red Screen Fix
 skytils.config.dungeons.miscellaneous.show_decimal_seconds_on_timers=Show Decimal Seconds on Timers
 skytils.config.dungeons.miscellaneous.sadan_phase_timer=Sadan Phase Timer
 skytils.config.dungeons.score_calculation.show_dungeon_score_estimate=Show Dungeon Score Estimate
-skytils.config.dungeons.score_calculation.minimized_dungeon_score_estimate=Minimized Dungeon Score Estimate
+skytils.config.dungeons.score_calculation.dungeon_score_estimate_style=Dungeon Score Estimate Style
+skytils.config.dungeons.score_calculation.hide_score_estimate_in_boss=Hide Score Estimate In Boss
 skytils.config.dungeons.score_calculation.score_calculation_party_assist=Score Calculation Party Assist
 skytils.config.dungeons.score_calculation.receive_score_calculation_party_assist=Receive Score Calculation Party Assist
 skytils.config.dungeons.score_calculation.allow_mimic_dead_from_other_mods=Allow Mimic Dead! from other Mods
