--- a/src/main/resources/assets/skytils/lang/en_US.lang
+++ b/src/main/resources/assets/skytils/lang/en_US.lang
@@ -103,12 +103,14 @@ skytils.config.dungeons.solvers.highest_blaze_color=Highest Blaze Color
 skytils.config.dungeons.solvers.next_blaze_color=Next Blaze Color
 skytils.config.dungeons.solvers.line_to_next_blaze_color=Line to Next Blaze Color
 skytils.config.dungeons.solvers.boulder_solver=Boulder Solver
+skytils.config.dungeons.solvers.boulder_solver_color=Boulder Solver Color
 skytils.config.dungeons.solvers.creeper_beams_solver=Creeper Beams Solver
 skytils.config.dungeons.solvers.ice_fill_solver=Ice Fill Solver
 skytils.config.dungeons.solvers.ice_path_solver=Ice Path Solver
 skytils.config.dungeons.solvers.teleport_maze_solver=Teleport Maze Solver
 skytils.config.dungeons.solvers.teleport_maze_solver_color=Teleport Maze Solver Color
 skytils.config.dungeons.solvers.three_weirdos_solver=Three Weirdos Solver
+skytils.config.dungeons.solvers.three_weirdos_solver_color=Three Weirdos Solver Color
 skytils.config.dungeons.solvers.tic_tac_toe_solver=Tic Tac Toe Solver
 skytils.config.dungeons.solvers.tic_tac_toe_solver_color=Tic Tac Toe Solver Color
 skytils.config.dungeons.solvers.trivia_solver=Trivia Solver
