--- a/src/main/resources/assets/skytils/lang/en_US.lang
+++ b/src/main/resources/assets/skytils/lang/en_US.lang
@@ -1,3 +1,4 @@
+skytils.config.general.api.connect_to_skytils_ws_server=Connect to Skytils WS Server
 skytils.config.general.api.fetch_kuudra_prices=Fetch Kuudra Prices
 skytils.config.general.api.fetch_lowest_bin_prices=Fetch Lowest BIN Prices
 skytils.config.general.command_aliases.command_alias_mode=Command Alias Mode
